--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1202,43 +1202,37 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |Priority |As a ... |I want to ... |So that I can...
 |`* * *` |user |undo my commands|revert unwanted changes
 
-|`* * *` |user |add a new task |
+|`* * *` |user |add a new person |
 
-|`* * *` |user |edit tasks |make changes to existing tasks
+|`* * *` |user |edit group |make changes to existing group
 
-|`* * *` |user with many tasks |find tasks |retrieve relevant tasks
+|`* * *` |user with many groups |find group |retrieve relevant groups
 
-|`* * *` |user |check tasks as done |know which tasks are completed
+|`* * *` |user |schedule meeting |
 
-|`* * *` |organized user |categorize tasks by module |navigate tasks list more easily
-
-|`* * *` |forgetful user |be reminded of deadlines |reschedule and prioritize to work on urgent tasks
-
-|`* * *` |user |see overdue tasks |reschedule to make up for it
+|`* * *` |organized user |categorize persons by group |navigate person list more easily
 
 |`* * *` |new user |have commands that can be easily understood |learn how to use the software without steep learning curve
 
-|`* * *` |organized user |assign tags to tasks |navigate task list easily and generate default template for each type of task to reduce time needed to add task
+|`* * *` |organized user |assign meeting to group |know that I am scheduled to meet the group
 
 |`* *` |impatient user |have autocomplete when typing my commands |execute my commands faster
 
-|`* *` |user |import and export data |transfer data between machines
+|`* *` |user |edit meeting |reschedule the meeting
 
-|`* *` |user |add estimated duration for task |estimate time needed to complete the task
+|`* *` |user |import and export data |transfer data between machines
 
 |`* *` |new user |quick rundown of functionalities |fully understand the software features
 
-|`* *` |advanced user |add subtask to certain task |break down huge task to smaller manageable tasks
+|`* *` |user |see an overview of meeting list for the day |plan schedule for the day
 
-|`* *` |user |see an overview of task list for the day |plan schedule for the day
-
-|`* *` |user |pin some tasks on top |be reminded of information of highest importance (not limited to deadline)
+|`* *` |user |pin some meeting on top |be reminded of meeting of highest importance
 
 |`* *` |confused user |check usage of particular functionality before using it |understand the function to use it
 
-|`* *` |user |highlight task as urgent |prioritize schedule
+|`* *` |user |highlight meeting as urgent |prioritize schedule
 
-|`* *` |user |see upcoming deadline |prioritize schedule
+|`* *` |user |see meeting |prioritize schedule
 
 |`*` |user |see usage statistics |understand working habits / productivity
 
@@ -1246,7 +1240,7 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`*` |international user |have multilingual typefaces |use the app in native language
 
-|`*` |multi-device user |have access from smartphone |check task list on the go without computer
+|`*` |multi-device user |have access from smartphone |check meeting list on the go without computer
 
 |`*` |user |security features |prevent information leakage
 |=======================================================================
@@ -1259,128 +1253,37 @@ _{More to be added}_
 (For all use cases below, the *System* is the `MeetingBook` and the *Actor* is the `student`, unless specified otherwise)
 
 [discrete]
-=== Use case: Add task
+=== Use case: Add person
 
 *MSS*
 
-1.  Student enters add command with relevant parameters such as name, description, deadline of the tasks.
-2.  MeetingBook updates the task list.
-3.  MeetingBook informs the student that the task has been successfully added, and refreshes the main page to reflect the newly updated task list.
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student enters add command with relevant parameters such as name, number, address of the person.
+4.  MeetingBook updates the person list.
+5.  MeetingBook informs the student that the person has been successfully added, and refreshes the main page to reflect the newly updated person list.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 2a. Student enters invalid parameter.
+* 5a. Student enters invalid parameter.
 [none]
-** 2a1. MeetingBook informs the student that he/she has entered invalid parameters.
+** 5a1. MeetingBook informs the student that he/she has entered invalid parameters.
 +
 Use case ends.
 
 [discrete]
-=== Use case: Find task
+=== Use case: Add group category
 
 *MSS*
 
-1.  Student enters command and keyword of task on command field.
-2.  MeetingBook returns a list of tasks that matches the keyword.
-+
-Use case ends.
-
-*Extensions*
-
-[none]
-* 2a. Student enters keyword that does not exist in the database.
-[none]
-** 2a1. MeetingBook informs the student that there are no tasks that match the keyword entered.
-+
-Use case ends.
-
-[discrete]
-=== Use case: Check tasks as done
-
-*MSS*
-
-1.  Student enters command and the task to check as done on command field.
-2.  MeetingBook returns a feedback to inform student that the task has been marked as done successfully.
-3.  MeetingBook updates the task list to remove the task that is marked as done.
-+
-Use case ends.
-
-*Extensions*
-
-[none]
-* 1a. Student enters task that is already done.
-+
-Use case ends.
-[none]
-* 1b. Student enters task that does not exist in the database.
-+
-Use case ends.
-[none]
-* 2a. Student can use find command to get a list of relevant tasks he/she is looking for.
-
-[discrete]
-=== Use case: Edit task
-
-*MSS*
-
-1.  Student enters command and the task with relevant fields that he/she wishes to edit.
-2.  MeetingBook returns a feedback to inform user that the task has been successfully edited.
-3.  MeetingBook updates the task list with updated information.
-+
-Use case ends.
-
-*Extensions*
-
-[none]
-* 2a. Student enters invalid field.
-+
-Use case ends.
-[none]
-* 2b. Student enters task that does not exist in the database.
-+
-Use case ends.
-[none]
-* 2c. Student enters task that is already marked as done.
-+
-Use case ends.
-
-[discrete]
-=== Use case: Add sub task
-
-*MSS*
-
-1.  Student enters command to add task with an additional parameter [parent task] and press enter.
-2.  MeetingBook returns feedback to inform user that the task has been added and attached to parent task.
-3.  MeetingBook updates the task list with newly added task.
-+
-Use case ends.
-
-*Extensions*
-
-[none]
-* 2a. Student enters parent task does not exist in the database.
-+
-Use case ends.
-[none]
-* 2b. Student enters parent task is already marked as done.
-+
-Use case ends.
-[none]
-* 2c. Student enters invalid parameters for child task.
-+
-Use case ends.
-
-[discrete]
-=== Use case: Add module category
-
-*MSS*
-
-1.  Student enters command to create a new category with a [module code] parameter.
-2.  MeetingBook creates the category.
-3.  MeetingBook feedbacks that the category had been successfully created.
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student enters command to create a new category with a [module code] parameter.
+4.  MeetingBook creates the category.
+5.  MeetingBook feedbacks that the category had been successfully created.
 +
 Use case ends.
 
@@ -1394,23 +1297,82 @@ Use case ends.
 Use case ends.
 
 [discrete]
-=== Use case: Import
+=== Use case: Find group
 
 *MSS*
 
-1.  Student copies out the storage file from the exporting machine.
-2.  Student pastes the storage file on the importing machine.
-3.  Student starts the MeetingBook.
-4.  MeetingBook scans and imports the data.
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student enters command and keyword of group on command field.
+4.  MeetingBook returns the list of group that matches the keyword.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 4a. The storage file is invalid / corrupted.
+* 4a. Student enters keyword that does not exist in the database.
 [none]
-** 4a1. MeetingBook will show an error telling the student that the file is corrupted.
+** 4a1. MeetingBook informs the student that there are no group that match the keyword entered.
++
+Use case ends.
+
+[discrete]
+=== Use case: Cancel meeting
+
+*MSS*
+
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student enters command to cancel meeting from a group.
+4.  MeetingBook remove meeting from the group.
++
+Use case ends.
+
+[discrete]
+=== Use case: Edit group
+
+*MSS*
+
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student enters command and the group with relevant fields that he/she wishes to edit.
+4.  MeetingBook returns a feedback to inform user that the group has been successfully edited.
+5.  MeetingBook updates the group list with updated information.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 4a. Student enters invalid field.
++
+Use case ends.
+[none]
+* 4b. Student enters group that does not exist in the database.
++
+Use case ends.
+
+[discrete]
+=== Use case: Import data
+
+*MSS*
+
+1.  Student copies out the storage file from the exporting machine.
+2.  Student pastes the storage file on the importing machine.
+3.  Student starts the MeetingBook.
+4.  MeetingBook starts up.
+5.  Student type command to import.
+6.  MeetingBook scans and imports the data.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 6. The storage file is invalid / corrupted.
+[none]
+** 6a1. MeetingBook will show an error telling the student that the file is corrupted.
 +
 Use case ends.
 
@@ -1419,7 +1381,20 @@ Use case ends.
 
 *MSS*
 
-1.  Student copies out the storage file from the exporting machine.
+1.  Student start uo MeetingBook.
+2.  MeetingBook starts up.
+3.  Student type command to export.
+4.  MeetingBook copies out the storage file from the machine.
+
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 4. MeetingBook unable to write to file.
+[none]
+** 4a1. MeetingBook will show an error telling the student that the operation failed.
 +
 Use case ends.
 
@@ -1428,16 +1403,18 @@ Use case ends.
 
 *MSS*
 
-1.  Student types part of the command on command field.
-2.  Student uses tab to scroll through available commands.
-3.  MeetingBook updates the command field with the highlighted command from the suggestion list.
+1.  Student start up MeetingBook.
+2.  MeetingBook starts up.
+3.  Student types part of the command on command field.
+4.  Student uses tab to scroll through available commands.
+5.  MeetingBook updates the command field with the highlighted command from the suggestion list.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 2a. No command autocomplete is available.
+* 5a. No command autocomplete is available.
 +
 Use case ends.
 
@@ -1447,7 +1424,7 @@ _{More to be added}_
 == Non Functional Requirements
 
 .  Should work on any <<mainstream-os,mainstream OS>> as long as it has Java `9` or higher installed.
-.  Should be able to hold up to 1000 tasks and 10 <<nus-module,NUS modules>> without a noticeable sluggishness in performance for typical usage.
+.  Should be able to hold up to 100 groups and 1000 person without a noticeable sluggishness in performance for typical usage.
 .  A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
 
 [appendix]
