--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -32,27 +32,33 @@ image::UI.jpg[width:800]
 [[Features]]
 == Features
 
-====
-*Command Format*
-* Items in square brackets are the parameters to be supplied by the user e.g `add [TRANSFORMATION]`
+==== *Command Format*
+* Items in square brackets are compulsory parameters to be added e.g `add [TRANSFORMATION]` +
+* For items surrounded by `< >`, they are compulsory parameters to be added that need to be typed with `< >`  e.g `g ls <ALBUM_NAME>` can be used as `g ls <Vacation>`+
+* Flags such as `/a` are compulsory flags that need to be included when using that command e.g `g ul ls /a`
 ====
 
 === Viewing help : `help`
 
-Format: `help`: viewing list of all commands +
-Format: `help [COMMAND]`: show explanation for certain command
+Format: `help`: viewing list of all commands
+
+=== Adding images to working set: `select`
+
+Format: `select [IMAGE_NAME]`: adds an image to the current working set
+Format: `select -all`: adds all images in current directory from working set
 
 Examples:
 
-* `help convert`
+* `select exampleImage` +
+* `select -all`
 
 === Applying a transformation to an image : `convert`
 
-Format: `add [args]`: apply the conversion specified to the select image
+Format: `convert [args]`: apply the conversion specified to the select image
 
 Custom defined transformation by user (see save set, 3.5)
 
-* Format: `add [-NAME_OF_TRANSFORMATION_SET]`
+* Format: `convert [NAME_OF_TRANSFORMATION_SET]`
 
 Available transformations
 
@@ -68,10 +74,6 @@ Available transformations
 
 ** Format: `convert colorspace [color space]`
 
-* `brightness`: changes the brightness of the image. VALUE [-100, 100]
-
-** Format: `add -brightness [VALUE]`
-
 * `contrast`: adjust the contrast of the image.
 
 ** Format: `convert contrast`
@@ -80,51 +82,15 @@ Available transformations
 
 ** Format: `convert rotate [vlaue]`
 
-* `compress`: compress an image. VALUE [0, 100]
-
-** Format: `add -compress [VALUE]`
-
-* `caption`: adds a caption to the image at the specific position and size
-
-** Format: `add -caption [X-POSITION][Y-POSITION][SIZE]`
-
-* `convert`: changes image in defined size and format.
-
-** Format: `add -convert [FORMAT_TYPES]`
-
 === Saving images/transformation set : `save`
 
 Format: `save -image [IMAGE_NAME]`: saves the transformed image +
-Format: `save -set [SET_NAME]`: saves the transformation set added thus far into a new transformation type
+Format: `save -set [SET_NAME]`: saves the transformation set added thus far as a new transformation type
 
 Examples:
 
 * `save -image exampleImage` +
 * `save -set exampleSet`
-
-=== Adding images to working set: `select`
-
-Format: `select [IMAGE_NAME]`: adds an image to the current working set
-Format: `select -all`: adds all images in current directory from working set
-
-Examples:
-
-* `select exampleImage` +
-* `select -all`
-
-=== Removing images from working set : `deselect`
-
-Format: `deselect [IMAGE_NAME]`: removes an image from the current working set
-Format: `deselect -all`: removes all images in current directory from working set
-
-Examples:
-
-* `deselect exampleImage` +
-* `deselect -all`
-
-=== Clear history of transformations : `clear`
-
-Format: `clear`: clears all history of transformations on image
 
 === Undoing previous actions : `undo`
 
@@ -132,18 +98,13 @@ Format: `undo`: Step back to previous transformation
 
 [NOTE]
 ====
-Undoable commands: those commands that modify the image's transformation (`add` and `clear`).
+Commands that can be undone: those commands that modify the image's transformation (`add` and `clear`).
 ====
 
 Examples:
 
-* `select -all` +
-`undo` (reverses the `select -all` command) +
-
-* `add -brightness 50` +
-`clear` +
-`undo` (reverses the `clear` command) +
-`undo` (reverses the `add -brightness 50` command) +
+* `convert resize 50` +
+`undo` (reverses the `convert resize 50` command) +
 
 === Redoing the previous actions : `redo`
 
@@ -151,40 +112,85 @@ Format: `redo`: Step forward to previous transformation
 
 Examples:
 
-* `add -brightness 50` +
-`undo` (reverses the `add -brightness 50` command) +
-`redo` (reapplies the `add -brightness 50` command) +
-
-=== Changing directories : `cd`
-
-Format: `cd [DIRECTORY_NAME]`: changes directory
+* `convert resize 50` +
+`undo` (reverses the `convert resize 50` command) +
+`redo` (reapplies the `convert resize 50` command) +
 
 === Listing files in directory : `ls`
 
 Format: `ls`: lists files in the current directory
 
-=== Exiting the application: `exit`
+=== Changing directories : `cd`
 
-Format: `exit`: closes the application
+Format: `cd [DIRECTORY_NAME]`: changes directory
 
 === Logging in to Google Photos: `login`
 
-Format: `login`: allows the user to login to their Google Photos
+Format: `login`: allows you to log in to Google Photos
 
-=== Traversing Google Photos: `google`
+[NOTE]
+====
+*Requires a stable internet connection. +
+*Once the `login` command is launched, you *MUST* proceed with logging in from the redirected page, otherwise the application will freeze. You may use `logout` afterwards if you have changed your mind. +
+*A fix is upcoming in v2.0.
+====
 
-Format: `google ls`: lists all images in Google Photos +
-Format: `google ls -albums`: lists all albums in Google Photos +
-Format: `google ls [IMAGE_NAME]`: lists all images in specified album from Google Photos
+=== Google Photos related commands: `g`
 
-=== Downloading photo from Google Photos: `dl`
+[NOTE]
+====
+All commands will require a stable internet connection.
+====
 
-Format: `google dl [IMAGE_NAME]`: downloads the selected photo to current local directory
+==== Traversing Google Photos: `g ls`
 
-=== Uploading photo from Google Photos: `upload`
+Format: `g ls`: lists all photos in your Google Photos, takes a longer amount of time depending on the number of images stored. +
+Format: `g ls /a`: lists all albums in your Google Photos. +
+Format: `g ls <[ALBUM_NAME]>`: lists all photos in specified album from Google Photos.
 
-Format: `google upload [IMAGE_NAME]`: downloads the selected photo to current google directory +
-Format: `google upload all`: downloads all photos in current local directory to current google directory
+Examples:
+
+* `g ls <Vacation>`
+
+==== Downloading photos from Google Photos: `g dl`
+
+[NOTE]
+====
+All photos will be downloaded to the currently opened local directory.
+Any files with duplicate naming existing in the targeted directory *WILL* be replaced
+====
+
+Format: `g dl <[IMAGE_NAME]>`: downloads specified image from Google Photos +
+Format: `g dl all <[ALBUM_NAME]>`: downloads all images from specified album in Google Photos, takes a longer amount of time depending on the number of images stored in the album. +
+Format: `g dl /a<[ALBUM_NAME]> /i<[IMAGE_NAME]>`: lists a specific photo from a specific album in Google Photos.
+
+Examples:
+
+* `g dl <Beach.png>` -> Downloads Beach.png+
+* `g dl all <Vacation>` -> Downloads all photos from Vacation album+
+* `g dl /a<Vacation> /i<Beach.png>` -> Downloads Beach.png from Vacation album+
+
+==== Uploading photos to Google Photos: `g ul`
+
+[NOTE]
+====
+All uploaded photos will be automatically categorised in album 'Piconso Uploads'
+====
+
+Format: `g ul <IMAGE_NAME>`: uploads specified image in currently open local directory to Google Photos +
+Format: `g ul all`: uploads all images in current directory to Google Photos, takes a longer amount of time depending on number of images to upload.
+
+Examples:
+
+* `g ul <Cat.png>` -> Uploads Cat.png+
+
+=== Logging out of Google Photos: `logout`
+
+Format: `logout`: logs you out of Google Photos
+
+=== Exiting the application: `exit`
+
+Format: `exit`: closes the application
 
 == FAQ
 
@@ -193,23 +199,20 @@ Format: `google upload all`: downloads all photos in current local directory to 
 
 == Command Summary
 
-* *Add* `add [TRANSFORMATION]` +
-e.g. `add -rotate left 180`
-* *Cd* : `cd [DIRECTORY_NAME]`
-* *Clear* : `clear`
-* *Deselect* : `deselect [IMAGE_NAME]/deselect -all` +
-e.g. `deselect exampleImage`
-* *Exit* : `exit`
 * *Help* : `help` +
-* *Ls* : `ls`
-* *Open* : `open [FILE_NAME]` +
-e.g. `open exampleImage.jpg`
-* *Redo* : `redo`
+* *Select* : `select [IMAGE_NAME]`+
+e.g. `select exampleImage.jpg`+
+* *Convert* `convert [TRANSFORMATION]` +
+e.g. `add -rotate left 180`+
 * *Save* : `save [IMAGE_NAME]/[SET_NAME]` +
-e.g. `save exampleImage.jpg`
-* *Select* : `select [IMAGE_NAME]/select -all`
-e.g. `select exampleImage.jpg`
-* *Login* : `login`
-* *Google* : `google ls/google ls -albums/google ls [ALBUM_NAME]`
-* *Download* : `download [IMAGE_NAME]/all`
-* *Undo* : `undo [IMAGE_NAME]/all`
+e.g. `save exampleImage.jpg`+
+* *Undo* : `undo`+
+* *Redo* : `redo`+
+* *Ls* : `ls`+
+* *Cd* : `cd [DIRECTORY_NAME]`+
+* *Login* : `login`+
+* *Google List* : `g ls OR g ls /a OR g ls <ALBUM_NAME>`+
+* *Download* : `g dl <IMAGE_NAME> OR g dl all <ALBUM_NAME> OR g dl /a<ALBUM_NAME> /i<IMAGE_NAME>`+
+* *Upload* : `g ul <IMAGE_NAME> OR g ul all`+
+* *Logout* : `logout`+
+* *Exit* : `exit`
