--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -32,9 +32,10 @@ image::Ui.png[width:800]
 [[Features]]
 == Features
 
-==== *Command Format*
+==== Command Format
 * Items in square brackets are compulsory parameters to be added e.g `add [TRANSFORMATION]` +
-* For items surrounded by `< >`, they are compulsory parameters to be added that need to be typed with `< >`  e.g `g ls <ALBUM_NAME>` can be used as `g ls <Vacation>`+
+* For items surrounded by `< >`, they are compulsory parameters to be added that need to be typed with `< >` +
+ e.g `g ls <ALBUM_NAME>` can be used as `g ls <Vacation>` +
 * Flags such as `/a` are compulsory flags that need to be included when using that command e.g `g ul ls /a`
 
 === Viewing help : `help`
@@ -129,9 +130,10 @@ Format: `login`: allows you to log in to Google Photos
 
 [NOTE]
 ====
-*Requires a stable internet connection. +
-*Once the `login` command is launched, you *MUST* proceed with logging in from the redirected page, otherwise the application will freeze. You may use `logout` afterwards if you have changed your mind. +
-*A fix is upcoming in v2.0.
+*Requires a stable internet connection* +
+Once the `login` command is launched, you *MUST* proceed with logging in from the redirected page, otherwise the application will freeze. You may use `logout` afterwards if you have changed your mind. +
+
+A fix is upcoming in v2.0.
 ====
 
 === Google Photos related commands: `g`
@@ -155,7 +157,7 @@ Examples:
 
 [NOTE]
 ====
-All photos will be downloaded to the currently opened local directory.
+All photos will be downloaded to the currently opened local directory. +
 Any files with duplicate naming existing in the targeted directory *WILL* be replaced
 ====
 
@@ -165,15 +167,15 @@ Format: `g dl /a<[ALBUM_NAME]> /i<[IMAGE_NAME]>`: lists a specific photo from a 
 
 Examples:
 
-* `g dl <Beach.png>` -> Downloads Beach.png+
-* `g dl all <Vacation>` -> Downloads all photos from Vacation album+
-* `g dl /a<Vacation> /i<Beach.png>` -> Downloads Beach.png from Vacation album+
+* `g dl <Beach.png>` -> Downloads Beach.png +
+* `g dl all <Vacation>` -> Downloads all photos from Vacation album +
+* `g dl /a<Vacation> /i<Beach.png>` -> Downloads Beach.png from Vacation album +
 
 ==== Uploading photos to Google Photos: `g ul`
 
 [NOTE]
 ====
-All uploaded photos will be automatically categorised in album 'Piconso Uploads'
+All uploaded photos will be automatically categorised into album 'Piconso Uploads'
 ====
 
 Format: `g ul <IMAGE_NAME>`: uploads specified image in currently open local directory to Google Photos +
@@ -199,19 +201,19 @@ Format: `exit`: closes the application
 == Command Summary
 
 * *Help* : `help` +
-* *Select* : `select [IMAGE_NAME]`+
-e.g. `select exampleImage.jpg`+
+* *Select* : `select [IMAGE_NAME]` +
+e.g. `select exampleImage.jpg` +
 * *Convert* `convert [TRANSFORMATION]` +
-e.g. `add -rotate left 180`+
+e.g. `add -rotate left 180` +
 * *Save* : `save [IMAGE_NAME]/[SET_NAME]` +
-e.g. `save exampleImage.jpg`+
-* *Undo* : `undo`+
-* *Redo* : `redo`+
-* *Ls* : `ls`+
-* *Cd* : `cd [DIRECTORY_NAME]`+
-* *Login* : `login`+
-* *Google List* : `g ls OR g ls /a OR g ls <ALBUM_NAME>`+
-* *Download* : `g dl <IMAGE_NAME> OR g dl all <ALBUM_NAME> OR g dl /a<ALBUM_NAME> /i<IMAGE_NAME>`+
-* *Upload* : `g ul <IMAGE_NAME> OR g ul all`+
+e.g. `save exampleImage.jpg` +
+* *Undo* : `undo` +
+* *Redo* : `redo` +
+* *Ls* : `ls` +
+* *Cd* : `cd [DIRECTORY_NAME]` +
+* *Login* : `login` +
+* *Google List* : `g ls OR g ls /a OR g ls <ALBUM_NAME>` +
+* *Download* : `g dl <IMAGE_NAME> OR g dl all <ALBUM_NAME> OR g dl /a<ALBUM_NAME> /i<IMAGE_NAME>` +
+* *Upload* : `g ul <IMAGE_NAME> OR g ul all` +
 * *Logout* : `logout`+
 * *Exit* : `exit`
