--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -501,27 +501,33 @@ image::SelectActivityDiagram.png[width="650"]
 // tag::export[]
 === Export feature
 ==== Current Implementation
-// TODO
+
 The export mechanism is facilitated by `ExportCommand`. `ExportCommandParser` is responsible for parsing the input arguments. +
 [NOTE]
-If there is no filepath provided, `export` command will return an invalid messgae, which the usage information to the user.
+If there is no filepath provided, `export` command will return an invalid message, which the usage information to the user.
 
 The following sequence diagram shows how export operation works:
 
 image::ExportCommandSeqDiagram.png[width="1000"]
+//TODO Explain XML
+The program will raise a `AddressBookExportEvent` to `EventCenter`. `StorageManager` which subscribed to the `EventCenter` which will trigger `handleAddressBookExportEvent` when received `AddressBookExportEvent`. This method will then export the data as a XML file using `Model#exportAddressBook`.
 
-The program will raise a `AddressBookExportEvent` to `EventCenter`. `StorageManager` which subscribed to the `EventCenter` which will trigger `handleAddressBookExportEvent` when received `AddressBookExportEvent`. This method will then export the data using `Model#exportAddressBook`.
+==== Design Consideration
 
-==== Design Considerations
-
-===== Aspect: Make export undo-able
-* **Alternative 1 (current choice):** Does not allow it to be undo
+===== Aspect: Make export undoable
+* **Alternative 1 (current choice):** Does not allow it to be undo.
 ** Pros: Easy to implement and verify if the command is executed successfully.
-** Cons: May have performance issues in terms of memory usage.
+** Cons: User have to manually navigate through the directory to delete the XML file to achieve the same result as undoing the command.
 
-* **Alternative 2: ** Allow it to be undo
+* **Alternative 2: ** Allow it to be undoable.
 ** Pros: Allow user to undo the command.
-** Cons: User may accidentally undo the command and does not know about it, thinking that his data has been exported.
+** Cons: Make it difficult to implement as there is a need to consider on how to resolve the following scenarios:
+*** After user export data, user may directly make changes to the XML file exported. Does undoing the operation deletes the file or not since it have been modified after the export command?
+*** After user export data, user rename the XML file or move the XML file. This causes the original file referenced by the `export` command to be lost and unable to continue the undo operation.
+
++
+These scenarios create unnecessary complications when we want to attempt undoing the operation. Therefore we do not allow the command to be undoable.
+
 // end::export[]
 
 // tag::dataencryption[]
