--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -9,7 +9,7 @@
 :xrefstyle: full
 :experimental:
 ifdef::env-github[]
-:tip-caption: :bulb:
+:tips-caption: :bulb:
 :note-caption: :information_source:
 endif::[]
 :repoURL: https://github.com/CS2103-AY1819S1-T12-1/main
