--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -310,10 +310,10 @@ Format: `list`
 //`select 1` +
 //Selects the 1st expense in the results of the `find` command.
 
-=== Setting a totalBudget: `setBudget`
-Sets the totalBudget for Expense Tracker. +
+=== Setting a total budget: `setBudget`
+Sets `totalBudget` for Expense Tracker. +
 
-The Expense Tracker will warn you when your total expenditure exceeds the totalBudget that is set.
+The Expense Tracker will warn you when your total expenditure exceeds the total budget that is set.
 
 Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 
@@ -321,9 +321,9 @@ Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 *Examples:*
 
 * `setBudget 2.00` +
- Sets a totalBudget of $2.00.
+ Sets a `totalBudget` of $2.00.
 * `setBudget 20.00` +
- Sets a totalBudget of $20.00.
+ Sets a `totalBudget` of $20.00.
 ****
 
 [NOTE]
@@ -333,9 +333,9 @@ Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 ====
 
 === Setting a recurring frequency for totalBudget: `setRecurrenceFrequency`
-Sets the recurrence frequency for the totalBudget of Expense Tracker.
+Sets the recurrence frequency for the `totalBudget` of Expense Tracker.
 
-Expense Tracker will reset your totalBudget after every `FREQUENCY`
+Expense Tracker will reset your spending after every `FREQUENCY`
 
 Format: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]`
 
@@ -344,9 +344,9 @@ Format: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]`
 *Examples:*
 
 * `setRecurrenceFrequency hrs/1` +
-    Sets the totalBudget to reset every 1 hour
+    Sets the spending of `totalBudget` to reset every 1 hour
 * `setRecurrenceFrequency hrs/1 min/30` +
-    Sets the totalBudget reset every 1 hour and 30 minutes
+    Sets the spending of `totalBudget` reset every 1 hour and 30 minutes
 ****
 
 [NOTE]
@@ -533,9 +533,9 @@ e.g. `find c/School`
 * *List* : `list`
 //* *Select* : `select INDEX` +
 //e.g.`select 2`
-* *Set totalBudget* : `setBudget` +
+* *Set `totalBudget`* : `setBudget` +
 e.g. `setBudget 20.00`
-* *Set recurring frequency for totalBudget*: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]` +
+* *Set recurring frequency for `totalBudget`*: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]` +
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
